<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/bleu_marine"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="320dp"
        android:backgroundTint="@color/bleu_ciel"
        android:fontFamily="@font/lato_black"
        android:text="@string/button_call"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:cornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:strokeColor="@color/bleu_marine"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/managementButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="250dp"
        android:backgroundTint="@color/bleu_ciel"
        android:fontFamily="@font/lato_black"
        android:text="@string/button_contact_management"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:cornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856"
        app:strokeColor="@color/bleu_marine"
        app:strokeWidth="3dp" />
</androidx.constraintlayout.widget.ConstraintLayout>